fixed header cut off button

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,6 +3,7 @@
   display: flex;
   align-items: normal;
   justify-content: space-between;
+  margin: 10px 10px;
 }
 .Header h1 {
   margin: 0;
@@ -26,6 +27,10 @@
   padding: 5px 15px;
   border-radius: 15px;
   margin-left: 10px;
+}
+
+.Header__logged-in{
+  margin-top: 10px;
 }
 
 
